# openapi-forge

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix  result
src/: error.rs  lib.rs  spec.rs  types.rs
